setup build with docker compose

--- a/src/seed/Dockerfile
+++ b/src/seed/Dockerfile
@@ -1,13 +1,33 @@
+# ビルドステージ
+FROM ghcr.io/astral-sh/uv:python3.10-bookworm as builder
+
+RUN apt-get update && apt-get install -y git
+
+WORKDIR /build
+
+# LINEのSeedフォントリポジトリをクローン
+ARG GIT_TAG=v20241007
+RUN git clone --depth=1 https://github.com/line/seed . && \
+    if [ -n "$GIT_TAG" ]; then \
+        git fetch --depth=1 origin $GIT_TAG && \
+        git checkout $GIT_TAG; \
+    fi
+
+# venvを作成し依存関係をインストール
+RUN make venv
+
+# 実行ステージ
 FROM ghcr.io/astral-sh/uv:python3.10-bookworm
 
-RUN apt-get update && \
-    apt-get install -y ttfautohint
+# ttfautohintは実行時のみ必要
+RUN apt-get update && apt-get install -y ttfautohint
 
-VOLUME /work
+# ビルド済みのリポジトリとvenvをコピー
+COPY --from=builder /build /build
 
-WORKDIR /work
+WORKDIR /build
 
-COPY entrypoint.sh /entrypoint.sh
-RUN chmod +x /entrypoint.sh
+VOLUME /build/out
 
-ENTRYPOINT ["/entrypoint.sh"]
+# ビルドとTTFファイルのコピー
+CMD make build && cp -r LINESeedJP/fonts/ttf/* /build/out/
