--- a/compose.yaml
+++ b/compose.yaml
@@ -1,12 +1,62 @@
 services:
-  fontforge:
+  # fontforge:
+  #   build:
+  #     context: .
+  #     dockerfile: ./src/fontforge/Dockerfile
+  #   environment:
+  #     - DISPLAY=${DISPLAY}
+  #   volumes:
+  #     - /tmp/.X11-unix:/tmp/.X11-unix
+  #     - ./fonts:/fonts
+  #     - ./build:/build
+  #     - ./out/:/out
+  iosevka:
     build:
-      context: .
-      dockerfile: ./src/fontforge/Dockerfile
-    environment:
-      - DISPLAY=${DISPLAY}
+      context: https://github.com/be5invis/Iosevka.git#v33.1.0:docker
+      dockerfile: Dockerfile
     volumes:
-      - /tmp/.X11-unix:/tmp/.X11-unix
-      - ./fonts:/fonts
-      - ./build:/build
-      - ./out/:/out
+      - ./build/Iosevka:/work/dist/Iosevka/TTF
+      - ./private-build-plans.toml:/work/private-build-plans.toml
+    environment:
+      - GIT_TAG=v33.1.0
+    command: ttf::Iosevka
+
+  nerd-fonts:
+    image: nerdfonts/patcher:latest
+    depends_on:
+      iosevka:
+        condition: service_completed_successfully
+    volumes:
+      - ./build/Iosevka:/in:Z
+      - ./build/IosevkaCustomNerdFonts:/out:Z
+    command: -c -s --makegroups 4
+  
+  line-seed:
+    build:
+      context: ./src/seed
+      dockerfile: Dockerfile
+      args:
+        GIT_TAG: v20241007
+      cache_from:
+        - type=gha
+      cache_to:
+        - type=gha,mode=max
+    volumes:
+      - ./build/LINESeedJP:/build/out
+
+  # builder:
+  #   build:
+  #     context: ./src/builder
+  #     dockerfile: Dockerfile
+  #   depends_on:
+  #     iosevka:
+  #       condition: service_completed_successfully
+  #     line-seed:
+  #       condition: service_completed_successfully
+  #     nerd-fonts:
+  #       condition: service_completed_successfully
+  #   volumes:
+  #     - ./src/builder:/work
+  #     - ./build/IosevkaCustomNerdFonts:/fonts/iosevka
+  #     - ./build/LINESeedJP/ttf:/fonts/seed
+  #     - ./out:/fonts/out
