--- a/private-build-plans.toml
+++ b/private-build-plans.toml
@@ -1,14 +1,14 @@
-[buildPlans.LInosevkaBase]
-family = "LInosevka Base"
+[buildPlans.Iosevka]
+family = "Iosevka"
 spacing = "term"
 serifs = "sans"
 noCvSs = false
 exportGlyphNames = false
 
-[buildPlans.LInosevkaBase.variants]
+[buildPlans.Iosevka.variants]
 inherits = "ss07"
 
-[buildPlans.LInosevkaBase.variants.design]
+[buildPlans.Iosevka.variants.design]
 two = "straight-neck-serifless"
 five = "upright-arched-serifless"
 six = "straight-bar"
@@ -46,33 +46,33 @@ lig-hyphen-chain = "without-notch"
 lig-double-arrow-bar = "without-notch"
 lig-single-arrow-bar = "without-notch"
 
-[buildPlans.LInosevkaBase.weights.ExtraLight]
+[buildPlans.Iosevka.weights.ExtraLight]
 shape = 200
 menu = 200
 css = 200
 
-[buildPlans.LInosevkaBase.weights.Regular]
+[buildPlans.Iosevka.weights.Regular]
 shape = 400
 menu = 400
 css = 400
 
-[buildPlans.LInosevkaBase.weights.ExtraBold]
+[buildPlans.Iosevka.weights.ExtraBold]
 shape = 800
 menu = 800
 css = 800
 
-[buildPlans.LInosevkaBase.widths.Normal]
+[buildPlans.Iosevka.widths.Normal]
 shape = 600
 menu = 5
 css = "normal"
 
-[buildPlans.LInosevkaBase.slopes.Upright]
+[buildPlans.Iosevka.slopes.Upright]
 angle = 0
 shape = "upright"
 menu = "upright"
 css = "normal"
 
-[buildPlans.LInosevkaBase.slopes.Oblique]
+[buildPlans.Iosevka.slopes.Oblique]
 angle = 9.4
 shape = "oblique"
 menu = "oblique"
